--- a/css/style.production.css
+++ b/css/style.production.css
@@ -82,6 +82,12 @@ body {
     border-radius: 50%;
 }
 
+.contact-info {
+    max-width: 700px;
+    margin: 0 auto;
+    text-align: center;
+}
+
 h1 {
     font-size: 30px;
     font-weight: 700;
