--- a/css/style.production.css
+++ b/css/style.production.css
@@ -6,17 +6,17 @@
 */
 
 /* CSS HEX Colot Palette
-    --primary-color: #060678ff;
-    --background-color: #f5f4f5ff;
-    --link-color: #d00000ff;
-    --visited-link: #0bad39ff;
-    --accent-orange: #f18f01ff;
-    --accent-blue: #0c0ce9ff;
-    --gridTile-Ltgray: #d3d3d3;
-    --sunStart: #edc655;
-    --sunHalf: #fcffad;
-    --sunEnd: #f76414;
- */
+--primary-color: #060678ff;
+--background-color: #f5f4f5ff;
+--link-color: #d00000ff;
+--visited-link: #0bad39ff;
+--accent-orange: #f18f01ff;
+--accent-blue: #0c0ce9ff;
+--gridTile-Ltgray: #d3d3d3;
+--sunStart: #edc655;
+--sunHalf: #fcffad;
+--sunEnd: #f76414;
+*/
 
 * {
     -webkit-box-sizing: border-box;
@@ -55,13 +55,12 @@
 
 body {
     background-color: #f5f4f5ff;
-    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+    font-family: "sulpher point", sans-serif;
     font-weight: 400;
-    font-size: 16px;
     /*Sets the font size to 16px */
-    line-height: 1.6;
+    font-size: 16px;
     /*Sets the line-height to 1.6 */
-    text-align: justify;
+    line-height: 1.6;
 }
 
 .about-me {
@@ -85,6 +84,23 @@ body {
 .contact-info {
     max-width: 700px;
     margin: 0 auto;
+    text-align: center;
+}
+
+.form-container {
+    display: block;
+    direction: center;
+    border: 5px solid #060678ff;
+    border-radius: 5px;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    padding: 20px 40px;
+    margin: 20px auto;
+    position: relative;
     text-align: center;
 }
 
@@ -223,6 +239,20 @@ button:focus,
     padding-right: 20px;
     padding-bottom: 20px;
     padding-left: 20px;
+    -webkit-box-shadow: 0 2px 6px #0c0ce9ff;
+    box-shadow: 0 2px 6px #0c0ce9ff;
+    -webkit-transition: -webkit-transform 0.5s ease;
+    transition: -webkit-transform 0.5s ease;
+    -o-transition: transform 0.5s ease;
+    transition: transform 0.5s ease;
+    transition: transform 0.5s ease, -webkit-transform 0.5s ease;
+}
+
+.project__item:hover {
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+    cursor: pointer;
 }
 
 .sun {
