--- a/css/Styles.css
+++ b/css/Styles.css
@@ -1,15 +1,16 @@
 /* CSS HEX Colot Palette
---primary-color: #060678ff;
---background-color: #f5f4f5ff;
---link-color: #d00000ff;
---visited-link: #0bad39ff;
---accent-orange: #f18f01ff;
---accent-blue: #0c0ce9ff;
---gridTile-Ltgray: #d3d3d3;
---sunStart: #edc655;
---sunHalf: #fcffad;
---sunEnd: #f76414;
-*/
+    --primary-color: #060678ff;
+    --background-color: #f5f4f5ff;
+    --link-color: #d00000ff;
+    --visited-link: #0bad39ff;
+    --accent-orange: #f18f01ff;
+    --accent-blue: #0c0ce9ff;
+    --gridTile-Ltgray: #d3d3d3;
+    --sunStart: #edc655;
+    --sunHalf: #fcffad;
+    --sunEnd: #f76414;
+ */
+
 :root {
     --primary-color: #060678ff;
     --background-color: #f5f4f5ff;
@@ -229,6 +230,7 @@ button:focus,
     color: var(--accent-blue); /* Adjust color as needed */
     padding: 10px 20px; /* Adjust padding as needed */
     overflow: hidden;
+    transition: font-size 0.3s;
 }
 
 .navigation-list__item::before,
@@ -257,6 +259,10 @@ button:focus,
 .navigation-list__item:hover::before,
 .navigation-list__item:hover::after {
     transform: scaleX(1);
+}
+
+.navigation-list__item:hover {
+    font-size: 1.3em; /* Increase text size on hover */
 }
 
 @media all and (max-width: 500px) {
